[metadata]
name = double_bot
version = attr: double_bot.__version__
description = __bot__
long_description = file: README.md
long_description_content_type = text/markdown
author = SizeDev
author_email = digiduncan@gmail.com
license = GPLv3
license_file = LICENSE
project_urls =
    Source=https://github.com/sizedev/double_bot
    Tracker=https://github.com/sizedev/double_bot/issues

[options.entry_points]
console_scripts =
    double_bot = double_bot.__main__:main